# magika_ex

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
lib/: magika_ex.ex
lib/magika_ex/: application.ex  native.ex
native/magika_nif/: Cargo.toml  README.md
native/magika_nif/src/: lib.rs
test/: magika_ex_test.exs
test/fixtures/: sample.py
